<resources>
    <string name="app_name">Flame Browser and Downloader</string>
    <string name="browser_label">Flame Browser</string>
    <string name="themes">Themes</string>
    <string name="clear_records">Clear Records</string>
    <string name="go_incognito">Go Incognito</string>
    <string name="menu">Menu</string>
    <string name="add_new_tab">Add new tab</string>
    <string name="light_themes">Light Themes</string>
    <string name="dark_themes">Dark Themes</string>
    <string name="enable_night_mode_for_web_pages">Enable night mode for web pages?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="day_ui">Day UI</string>
    <string name="night_ui">Night UI</string>
    <string name="change_theme_quick_action_button">Change theme quick action button</string>
    <string name="follow_system">Follow system</string>
    <string name="current_theme">Current Theme</string>
    <string name="oops_general_message">Oops… something went wrong.</string>
    <string name="do_you_want_to_enable_dark_web_ui_to_darken_web_pages_experimental">Do you want to enable dark web UI to darken web pages? (Experimental)</string>
    <string name="do_you_want_to_also_disable_dark_web_ui">Do you want to also disable Dark Web UI?</string>
    <string name="do_you_want_to_enable_light_theme_for_app">Do you want to enable light theme for app?</string>
    <string name="do_you_want_to_enable_dark_theme_for_app">Do you want to enable dark theme for app?</string>
    <string name="follow_system_theme_settings">Follow system theme settings.</string>
    <string name="follow_battery_saver_state">Follow battery saver state</string>
    <string name="favicon">Favicon</string>
    <string name="new_tab">New Tab</string>
    <string name="close_tab">Close tab</string>
    <string name="tab_preview">Tab Preview</string>
    <string name="refresh_web_page">Refresh web page</string>
    <string name="search">Search</string>
    <string name="view_tabs">View tabs</string>
    <string name="max_count">99+</string>
    <string name="home">Home</string>
    <string name="show_more">Show more</string>
    <string name="connection_information_or_search_engine_selector">Connection information or search engine selector</string>
    <string name="browser_splash_logo">Browser splash logo</string>
    <string name="qr_code_and_barcode_scanner">QR code and Barcode scanner</string>
    <string name="quick_link_favicon">Quick Link favicon</string>
    <string name="ql_item">QL Item</string>
    <string name="voice_launcher_for_searching">Voice Launcher for searching</string>
    <string name="search_or_type_web_address">Search or type web address</string>
    <string name="pdf_viewer_is_not_available">PDF Viewer is not available on your device.</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="downloads">Downloads</string>
    <string name="history">History</string>
    <string name="mobile_mode">Mobile mode</string>
    <string name="close_this_tab">Close this tab</string>
    <string name="site_settings">Site settings</string>
    <string name="flame_pro_at_50_off">Flame Pro at 50% off!</string>
    <string name="find_in_page">Find in page</string>
    <string name="share">Share</string>
    <string name="copy_link">Copy link</string>
    <string name="print_save">Print / Save</string>
    <string name="add_to_speed_dial">Add to speed dial</string>
    <string name="bookmark_this">Bookmark this</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="text_scaling">Text scaling</string>
    <string name="cannot_go_forward">Cannot go forward</string>
    <string name="fullscreen_mode_is_only_for_web_pages">Fullscreen mode is only for webpages</string>
    <string name="exit_fullscreen_mode_message">To exit fullscreen mode press back</string>
    <string name="desktop_mode">Desktop mode</string>
    <string name="upgrade_to_pro_version_at_discounted_rates_and_support_development_of_this_app">Upgrade to Pro Version at discounted rates and support development of this app!</string>
    <string name="close_all_tabs">Close all tabs</string>
    <string name="close_find_box">Close find box</string>
    <string name="find_below">Find below</string>
    <string name="find_above">Find above</string>
    <string name="_100_100">100 / 100</string>
    <string name="app_not_found">App not found</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="unable_to_find_wp_url">Unable to find webpage URL. Please retry again.</string>
    <string name="_1">1</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="basics">Basics</string>
    <string name="search_engine">Search engine</string>
    <string name="value">Value</string>
    <string name="tips">Tips</string>
    <string name="manage">Manage</string>
    <string name="search_history">Search History</string>
    <string name="home_pages">Home Pages</string>
    <string name="advanced">Advanced</string>
    <string name="site_settings_2">Site Settings</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="about_our_app">About our app</string>
    <string name="share_link_of_app">Share Link of App</string>
    <string name="about">About</string>
    <string name="success">Success!</string>
    <string name="unable_to_find_webpage_url_retry_again_by_refreshing_webpage">Unable to find webpage URL. Retry again by refreshing webpage.</string>
    <string name="search_home_pages">Search home pages</string>
    <string name="manage_home_pages">Manage Home Pages</string>
    <string name="close_search_box">Close search box</string>
    <string name="search_your_home_pages">Search your home pages</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="do_you_really_want_to_remove">Do you really want to remove?</string>
    <string name="item">Item</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="unable_to_add_bookmark_at_this_time_try_again">Unable to add bookmark at this time. Try again.</string>
    <string name="search_bookmarks">Search Bookmarks</string>
    <string name="manage_bookmarks">Manage Bookmarks</string>
    <string name="search_your_bookmarks">Search your bookmarks</string>
    <string name="message">Message</string>
    <string name="opened_in_background">Opened in background</string>
    <string name="open_in_background">Open in background</string>
    <string name="open_in_new_tab_and_switch">Open in new tab and Switch</string>
    <string name="edit_name">Edit Name</string>
    <string name="file_name">File Name</string>
    <string name="unknown">Unknown</string>
    <string name="change_name">Change Name</string>
    <string name="quick_link_already_has_this_name_please_change_it">Quick link already has this name. Please change it.</string>
    <string name="enter_quick_link_name">Enter quick link name</string>
    <string name="search_your_history">Search your history</string>
    <string name="manage_history">Manage History</string>
    <string name="clear_history">Clear History</string>
    <string name="jan_7_2023">Jan 7, 2023</string>
    <string name="hey">Hey,</string>
    <string name="do_you_really_want_to_delete_all_history">do you really want to delete all history?</string>
    <string name="done">done!</string>
    <string name="close">Close</string>
    <string name="search_engine_favicon">Search engine favicon</string>
    <string name="clear_text">Clear text</string>
    <string name="load_now">Load now</string>
    <string name="edit">Edit</string>
    <string name="clipboard_has">Clipboard has:</string>
    <string name="enter">Enter</string>
    <string name="empty_clipboard">Empty Clipboard</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="why_needed">Why needed?</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="goto_settings">Goto Settings</string>
    <string name="why_need_microphone_permission">Microphone permission is needed to record audio</string>
    <string name="why_need_notification_permission">Notification permission is needed to show download related notifications of downloader.</string>
    <string name="why_need_location_permission">Location permission is needed to obtain location</string>
    <string name="goto_settings_microphone">"Go to \"Settings\"->\"Permissions\" and Grant \"Microphone\" permission</string>
    <string name="goto_settings_location">"Go to \"Settings\"->\"Permissions\" and Grant \"Location\" permission</string>
    <string name="activity_for_handling_voice_search_is_not_found">Activity for handling voice search is not found.</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="block">Block</string>
    <string name="allow">Allow</string>
    <string name="wants_to_play_drm_protected_content">" wants to play DRM protected content."</string>
    <string name="want_to_use_your_microphone">" want to use your microphone."</string>
    <string name="unable_to_grant_permission">Unable to grant permission</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="manage_search_history">Manage Search History</string>
    <string name="search_search_history">Search search history</string>
    <string name="search_your_search_history">Search your search history</string>
    <string name="reset">Reset</string>
    <string name="cookies">Cookies</string>
    <string name="view_cookies_info">View cookies info</string>
    <string name="do_you_really_want_to_reset_site_settings_to_default">Do you really want to reset site settings to default?</string>
    <string name="startup_and_exit_features">Startup and Exit Features</string>
    <string name="incognito_logo">Incognito logo</string>
    <string name="incognito_mode_on">Incognito Mode : On</string>
    <string name="you_can_browse_privately">You can browse privately</string>
    <string name="flame_browser_will_not_save">Flame Browser will not save</string>
    <string name="your_recent_tabs">- Your recent tabs</string>
    <string name="your_activity_might_still_be_visible_to">Your activity might still be visible to</string>
    <string name="might_still_visible_to">- Websites you visit \n- Your employer or school \n- Your internet service provider</string>
    <string name="your_browsing_and_search_history">- Your browsing and search history</string>
    <string name="when_you_turn_off_incognito_mode_or_exit_app_with_incognito_mode_on">When you turn off incognito mode or exit app with incognito mode on</string>
    <string name="your_cookies_and_site_data_will_be_cleared_and_you_will_be_get_logged_out_from_all_websites">Your cookies and site data will be cleared and you will be get logged out from all websites</string>
    <string name="open_image_in_new_tab">Open image in new tab</string>
    <string name="open_image_in_new_tab_and_switch">Open image in new tab and switch</string>
    <string name="save_image">Save image</string>
    <string name="copy_link_text">Copy link text</string>
    <string name="copy_image_url">Copy image URL</string>
    <string name="share_link">Share link</string>
    <string name="share_image_url">Share image URL</string>
    <string name="downloader_settings">Downloader Settings</string>
    <string name="do_you_really_want_to_delete">do you really want to delete</string>
    <string name="selected_tasks"> Selected tasks?</string>
    <string name="delete_source_file_too">Delete source file too</string>
</resources>