<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey"
            android:textColor="?attr/primaryText"
            android:textAppearance="?textAppearanceHeadline6"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_really_want_to_delete"
            android:textColor="?attr/primaryText"
            android:textAppearance="?textAppearanceSubtitle1"
            android:layout_marginBottom="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selectedTasksCountTVDeleteMultiplePopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textColor="?attr/primaryText"
                android:textStyle="bold"
                android:textAppearance="?textAppearanceHeadline6"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_tasks"
                android:textColor="?attr/primaryText"
                android:textAppearance="?textAppearanceSubtitle1"
                />

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteSourceFileCB"
            android:text="@string/delete_source_file_too"
            android:textColor="?attr/primaryText"
            android:button="@drawable/custom_checkbox_drawable"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/noBtn"
                android:text="@string/no"
                android:layout_weight="1"
                style="@style/CancelButtonStyle" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/yesBtn"
                android:text="@string/yes"
                android:layout_weight="1"
                style="@style/CustomFilledButton" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>