<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey"
        android:textColor="?attr/primaryText"
        android:textAppearance="?textAppearanceHeadline6"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_really_want_to_reset_site_settings_to_default"
        android:textColor="?attr/primaryText"
        android:textAppearance="?textAppearanceSubtitle1"
        />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"

            style="@style/CancelButtonStyle"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_weight="1"


            style="@style/CustomFilledButton"
            />


    </LinearLayout>

</LinearLayout>